--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,54 @@
+- TCP(전송 제어 프로토콜) 및 UDP(사용자 데이터그램 프로토콜)는 네트워크를 통해 데이터를 전송하는 데 사용되는 
+  두 가지 주요 프로토콜
+- 둘 다 TCP/IP 모델의 전송 계층에서 작동 
 
+1. 연결 지향 vs 비연결
+- TCP는 연결 지향 프로토콜. 출발지와 목적지에서 교환할 메시지가 교환될 때까지 연결이 설정되고 유지 
+- 연결을 설정하기 위한 3 Way Handshake, 통신을 마칠때 설정하는 4 Way Handshake가 포함
+- UDP는 비연결형 프로토콜. 데이터를 보내기 전에 HandShake와 같은 연결을 설정하지 않고 전송
+
+2. 신뢰성
+- TCP는 안정적인 데이터 전송을 제공. 전송된 데이터가 오류 없이 전송된 순서대로 목적지에 도착 
+- TCP는 승인, 손실되거나 손상된 패킷의 재전송 및 시퀀싱과 같은 메커니즘을 통해 이러한 안정성을 달성
+- UDP는 신뢰성을 제공하지 않음. 전달 순서 또는 정합성을 보장하지 않습니다.
+
+3. 데이터 흐름 제어
+- TCP는 네트워크 정체로 인해 정보가 손실되지 않도록 데이터 패킷을 관리합니다. 흐름 제어 및 혼잡 제어 메커니즘을 사용
+- UDP는 네트워크 상태를 알지 못한 채 목적지로 패킷을 전송
+
+4. 속도
+- 높은 신뢰성과 연결 설정, 오류 검사 및 보장된 순서와 관련된 오버헤드 때문에 TCP는 UDP보다 느림.
+- UDP는 TCP보다 빠르고 간단하며 효율적. 따라서 속도를 위해 일정 수준의 데이터 손실이 허용되는 VoIP, 
+  화상 회의, 스트리밍 및 게임과 같은 실시간 응용 프로그램에 일반적으로 선택
+ 
+5. 헤더 사용
+- TCP 헤더는 추가 기능과 복잡성으로 인해 더 크고 더 많은 정보를 포함합니다. TCP 헤더는 최소 20바이트
+- UDP 헤더는 크기가 8바이트로 TCP 헤더보다 간단하고 작음.
+
+6. 패킷 확인
+- TCP는 승인 패킷을 소스로 전송하여 수신하는 모든 패킷을 승인. ACK를 일정시간이상 수신받지 못하면 패킷을 재전송
+- UDP는 수신된 패킷을 승인하지 않음. UDP를 기반으로 구축된 애플리케이션은 필요한 경우 자체 승인 프로세스 구축 필요
+
+7. 시퀀싱
+- TCP는 지정된 순서대로 데이터 패킷을 재정렬.
+- UDP는 순서를 신경쓰지 않음.
+
+8. 결론
+- TCP와 UDP 사이의 선택은 응용 프로그램의 요구 사항에 따라 크게 달라짐 
+- TCP는 파일전송과 같은 속도보다 신뢰성이 더 중요한 경우에 사용
+- UDP는 신뢰성보다 속도가 선호되고 Streaming 서비스와 같이 일부 데이터 손실이 허용되는 경우에 사용
+- HTTP/3
+```
+    💡HTTP/3는 UDP 기반의 프로토콜인 QUIC을 사용하여 통신하는 프로토콜이다.
+     UDP는 커스터마이징이 용이해 이를 활용하여 QUIC를 개발하였다.
+     QUIC는 기존의 TCP보다 더 빠른 전송 속도를 가지고 있다.
+     UDP를 사용함으로써 핸드쉐이크 과정 자체를 날려버리고 다른 방법으로 연결의 신뢰성을 확보함으로써 
+     레이턴시를 줄였다.
+     패킷 손실 감지에 걸리는 시간을 단축시켰다.
+     Connection ID를 사용하여 서버와 연결을 생성하기 때문에 클라이언트의 IP가 바뀌어도 연결이 유지된다.
+```
+
+참고
+- https://mangkyu.tistory.com/15#comment17003019
+- https://evan-moon.github.io/2019/10/08/what-is-http3/
+- https://www.youtube.com/watch?v=ikDVGYp5dhg
