--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,25 @@
-
+1. 입력한 도메인에 해당하는 IP 주소 획득
+- hosts 파일 확인(윈도우) -> dns cache 확인 -> dns 질의
+- 공유기를 사용한다면 공유기의 DNS 포워딩 기능을 사용하며 공유기가 대신 DNS 서버에 질의해주고 응답값을 받아서 전달해준다.
+- 공유기를 사용하지 않으면 ISP에서 전달해준 DNS 설정 정보를 사용하여 DNS 서버에 직접 질의한다.
+2. GSLB가 작동할 경우 사용자의 위치에 가장 가깝거나 로드 밸런싱을 위해 트래픽이 적은 서버의 IP 주소를 반환할 수 있다.
+  ```
+    💡GSLB(Global Server Load Balancing)란
+     지리적 위치왕 서버 상태를 기반으로 여러 서버와 데이터 센터에 트래픽을 분산하는 시스템
+     기능
+     - 서버 헬스체크에 따른 가용성 증가
+     - 로드 밸런싱
+     - 레이턴시 기반 및 위치기반 서비스 가능
+  ```
+3. 해당 IP 주소에서 서버에 대한 TCP/IP 연결을 시작하여 HTTP 요청 및 응답 과정을 거친다.
+4. CDN 서비스를 사용할 경우 이미지, CSS파일, JavaScript 등과 같은 리소스는 지리적으로 클라이언트에 가장 가깝고 정상 상태인
+   엣지 서버의 리소스를 제공해준다.
+  ```
+    💡CDN(Content Delivery Network)란
+     웹 콘텐츠를 효율적으로 제공해주는 분산 네트워크
+     최종 사용자에게 가까운 엣지 서버의 캐시된 컨텐츠를 제공해준다
+       지리적 위치에 관계 없이 사용자에게 콘텐츠를 빠르게 제공
+     단일 오리진 서버의 부하 분산 및 비용 절감
+  ```
+5. 백엔드에서 동적인 컨텐츠를 제공할경우 이를 제공하기 위해 데이터베이스를 쿼리하거나 다른 처리를 수행할 수 있다.
+6. 모든 과정이 완료되면 TCP/IP는 종료된다.
