--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,8 @@
+- null 참조가 될 수 있다.
+- 참조형 변수에 대한 초기값으로 null이 자동으로 할당된다.
+- 프로그램 실행 도중 null 참조에 대한 접근이 발생하면 NullPointerException이 발생한다.
+- 자바8부터 나온 Optional 문법을 사용하여 Null 참조에 대한 방어적인 로직을 구현할 수 있다.
+- 2011년에 출시된 코틀린에서는 언어적 차원에서 기본적으로 null 값을 허용하지 않는다.
 
+참고
+- https://url.kr/sr59ex
