--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,38 @@
+HashMap
+- 해시 테이블의 원리를 기반으로 동작
+- 순서를 유지하지 않음. 순서유지를 위해서는 LinkedHashMap 혹은 TreeMap을 사용
 
+1. 초기화
+- HashMap에 일정량의 버킷을 할당
+- 기본 초기 용량은 16이지만 값을 직접 지정할 수 있다.
+
+2. 저장
+- 키-값 쌍으로 HashMap에 저장한다.
+- 키값을 hashCode() 메서드를 통해 int형의 해시값으로 바꾸고 버킷의 사이즈로 나눈 나머지의 값이 해시 버킷의
+  인덱스가 된다.
+- 해시 함수에 의해 계산된 버킷이 비어 있다면 충돌이 없으면 키-값 쌍이 해당 버킷에 저장
+- 충돌이 발생하면 Seperate Chaining 방법을 사용하여 해결
+  ```
+    💡Seperate Chaining
+     해시값이 같을 때, Linked List나 Red-Black Tree를 사용해 해결하는 방법
+     - Linked List: 각각의 버킷을 Linked List의 첫부분(head)로 충돌시 list add하는 방식
+     - Red Black Tree: Linked List와 같지만, 자료구조만 Tree로 하는 방법
+     - 자바8부터는 8개의 키-값 쌍이 모이면 Red-Black Tree로 변환. 개수가 6개 이하에 이르면 다시 링크드 리스트로 변경
+  ```
+
+3. 검색
+- 키갑의 hashCode() 메서드와 버킷의 사이즈를 사용하여 반화된 해시값을 사용하여 버킷을 찾음
+- 버킷에 링크드 리스트 혹은 트리로 되어있을 경우 equals() 메서드를 사용하여 키를 찾음 
+
+4. 제거
+- 키값의 hashCode() 메서드와 버킷의 사이즈를 사용하여 반화된 해시값을 통해 버킷을 찾은 다음 equals() 메서드를 
+  사용하여 연결된 목록 또는 트리에서 올바른 항목을 찾아 제거
+
+5. Resizing
+- HashMap의 데이터 개수가 일정 로드 팩터(기본값 0.75)를 초과하면 HashMap은 resize() 메소드를 호출하여 
+  버킷 수를 증가시킴
+- 일반적으로 기본 배열의 크기를 두 배로 늘리고 모든 키를 새 버킷으로 다시 해시
+
+참고
+- https://mhwan.tistory.com/59
+- https://zrr.kr/5urw
